--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -206,11 +206,11 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot\n",
-    "city = ('MODI','BHUVI','PRATHAM','MAYAWATI','MAMTA','YOGI')\n",
+    "Party = ('MODI','BHUVI','PRATHAM','MAYAWATI','MAMTA','YOGI')\n",
     "rank = [6,7,1,5,2,3]\n",
     "explode = (0.2,0,0,0,0,0)\n",
     "colors = ['yellowgreen','pink','purple','grey','red','orange']\n",
-    "pyplot.pie(rank,explode=explode,labels=city,colors=colors,autopct='%1.1f%%',shadow=True,startangle=120)\n",
+    "pyplot.pie(rank,explode=explode,labels=Party,colors=colors,autopct='%1.1f%%',shadow=True,startangle=120)\n",
     "pyplot.axis('equal')\n",
     "pyplot.show()"
    ]
