--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -114,7 +114,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot\n",
-    "city = ('Pune','Etawa','Meerut','Gorakpur','Prayagraj','Bhopal')\n",
+    "city = ('Pune','Etawah','Meerut','Gorakhpur','Prayagraj','Bhopal')\n",
     "y_val = np.arange(len(city))\n",
     "rank = [4,7,1,3,2,5]\n",
     "pyplot.bar(y_val,rank,align='center')\n",
@@ -178,7 +178,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot\n",
-    "city = ('Pune','Etawa','Meerut','Gorakpur','Prayagraj','Bhopal')\n",
+    "city = ('Pune','Etawah','Meerut','Gorakhpur','Prayagraj','Bhopal')\n",
     "rank = [4,7,1,3,2,5]\n",
     "explode = (0.2,0,0,0,0,0)\n",
     "colors = ['yellowgreen','pink','purple','grey','red','orange']\n",
