--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -214,6 +214,62 @@
     "pyplot.axis('equal')\n",
     "pyplot.show()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make a 3d class , name employee and take the data of 5 employees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Employee 1:\n",
+      "Name: John Doe\n",
+      "Age: 30\n",
+      "Salary: 50000\n",
+      "Employee 2:\n",
+      "Name: Jane Smith\n",
+      "Age: 35\n",
+      "Salary: 60000\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee:\n",
+    "    def __init__(self, name, age, salary):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.salary = salary\n",
+    "\n",
+    "# Create instances of the Employee class for five employees\n",
+    "employee1 = Employee(\"John Doe\", 30, 50000)\n",
+    "employee2 = Employee(\"Jane Smith\", 35, 60000)\n",
+    "employee3 = Employee(\"Michael Johnson\", 28, 45000)\n",
+    "employee4 = Employee(\"Emily Davis\", 32, 55000)\n",
+    "employee5 = Employee(\"David Wilson\", 40, 70000)\n",
+    "\n",
+    "# Accessing employee data\n",
+    "print(\"Employee 1:\")\n",
+    "print(\"Name:\", employee1.name)\n",
+    "print(\"Age:\", employee1.age)\n",
+    "print(\"Salary:\", employee1.salary)\n",
+    "\n",
+    "print(\"Employee 2:\")\n",
+    "print(\"Name:\", employee2.name)\n",
+    "print(\"Age:\", employee2.age)\n",
+    "print(\"Salary:\", employee2.salary)\n",
+    "\n",
+    "# ... and so on for employee3, employee4, and employee5\n"
+   ]
   }
  ],
  "metadata": {
