--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -322,6 +322,28 @@
     "plt.plot(y,x,'g*-')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, array([0, 0, 0]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.sparse.csgraph import connected_components\n",
+    "from scipy.sparse import csr_matrix\n",
+    "arr = np.array([[0,1,2],[1,0,0],[2,0,0]])\n",
+    "newarr = csr_matrix(arr)\n",
+    "print(connected_components(newarr))"
+   ]
   }
  ],
  "metadata": {
