--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -344,6 +344,36 @@
     "newarr = csr_matrix(arr)\n",
     "print(connected_components(newarr))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find the shortest path from source to all using vertex dijkstra algo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([0., 1., 2.]), array([-9999,     0,     0]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.sparse.csgraph import dijkstra\n",
+    "from scipy.sparse import csr_matrix\n",
+    "arr = np.array([[0,1,2],[1,0,0],[2,0,0]])\n",
+    "newarr = csr_matrix(arr)\n",
+    "print(dijkstra(newarr,return_predecessors=True,indices=0))"
+   ]
   }
  ],
  "metadata": {
