--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -374,6 +374,40 @@
     "newarr = csr_matrix(arr)\n",
     "print(dijkstra(newarr,return_predecessors=True,indices=0))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Floyd Warshall Algo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([[0., 1., 2.],\n",
+      "       [1., 0., 3.],\n",
+      "       [2., 3., 0.]]), array([[-9999,     0,     0],\n",
+      "       [    1, -9999,     0],\n",
+      "       [    2,     0, -9999]]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.sparse.csgraph import floyd_warshall\n",
+    "from scipy.sparse import csr_matrix\n",
+    "arr=np.array([[0,1,2],[1,0,0],[2,0,0]])\n",
+    "newarr = csr_matrix(arr)\n",
+    "print(floyd_warshall(newarr,return_predecessors=True))"
+   ]
   }
  ],
  "metadata": {
