--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -408,6 +408,66 @@
     "newarr = csr_matrix(arr)\n",
     "print(floyd_warshall(newarr,return_predecessors=True))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Write a prgram to create a series from a list , array and dictionary "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Series from list\n",
+      "0    10\n",
+      "1    20\n",
+      "2    30\n",
+      "3    40\n",
+      "4    50\n",
+      "dtype: int64\n",
+      "\n",
+      "Series from numpyarray:\n",
+      "0    0.5\n",
+      "1    0.8\n",
+      "2    1.2\n",
+      "3    1.5\n",
+      "dtype: float64\n",
+      "\n",
+      "Seriesfrom dictionary\n",
+      "A    100\n",
+      "B    200\n",
+      "C    300\n",
+      "D    400\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "import numpy as np\n",
+    "list_data = [10,20,30,40,50]\n",
+    "list_series = pd.Series(list_data)\n",
+    "print(\"Series from list\")\n",
+    "print(list_series)\n",
+    "array_data = np.array([0.5,0.8,1.2,1.5])\n",
+    "array_series = pd.Series(array_data)\n",
+    "\n",
+    "print(\"\\nSeries from numpyarray:\")\n",
+    "print(array_series)\n",
+    "dict_data = {'A':100,'B':200,'C':300,'D':400}\n",
+    "dict_series= pd.Series(dict_data)\n",
+    "print(\"\\nSeriesfrom dictionary\")\n",
+    "print(dict_series)"
+   ]
   }
  ],
  "metadata": {
