--- a/Day3.ipynb
+++ b/Day3.ipynb
@@ -468,6 +468,37 @@
     "print(\"\\nSeriesfrom dictionary\")\n",
     "print(dict_series)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write program to count number of missing value in each column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coloum1    1\n",
+      "Column2    1\n",
+      "Column3    1\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = {'Coloum1':[1,2,3,None,5],'Column2':[6,None,8,9,10],'Column3':[11,12,None,14,15]}\n",
+    "df = pd.DataFrame(data)\n",
+    "print(df.isnull().sum(axis=0))"
+   ]
   }
  ],
  "metadata": {
