--- a/Day4revesion.ipynb
+++ b/Day4revesion.ipynb
@@ -46,21 +46,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3, 4)\n",
-      "12\n"
+      "(5, 7)\n",
+      "35\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "a = np.array([[1,2,3,4],[5,6,7,8],[9,10,11,12]])\n",
+    "import pandas as pd\n",
+    "a = pd.read_csv(r'E:\\DAY2\\Data\\Book2.csv')\n",
     "print(a.shape)\n",
     "print(a.size)"
    ]
