--- a/Day4.ipynb
+++ b/Day4.ipynb
@@ -313,6 +313,27 @@
     "res = seaborn.stripplot(x = 'total_bill', y = 'sex',data = c)\n",
     "plt.show()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "impo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "root = Tk()\n",
+    "root.title(\"Welcome to GeeksforGeeks\")\n",
+    "root.geometry('350x200')\n",
+    "root.mainloop()"
+   ]
   }
  ],
  "metadata": {
