--- a/Day2.ipynb
+++ b/Day2.ipynb
@@ -10936,6 +10936,349 @@
     "plt.show()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3  6  9 12]\n",
+      " [15 18 21 24]\n",
+      " [27 30 33 36]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr = np.array([[1,2,3,4,],[5,6,7,8],[9,10,11,12]])\n",
+    "new_arr=arr*3\n",
+    "print(new_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "arr =  np.array([1,2,3,4,5])\n",
+    "print(arr)\n",
+    "print(type(arr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 580  640]\n",
+      " [1390 1540]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "matrix1 = np.array([[10,20,30],[40,50,60]])\n",
+    "matrix2 = np.array([[7,8],[9,10],[11,12]])\n",
+    "result = np.dot(matrix1,matrix2)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "series from list\n",
+      "0    10\n",
+      "1    20\n",
+      "2    30\n",
+      "3    40\n",
+      "4    50\n",
+      "dtype: int64\n",
+      "\n",
+      "Series from numpy array:\n",
+      "0    0.5\n",
+      "1    0.8\n",
+      "2    1.2\n",
+      "3    1.5\n",
+      "4    2.0\n",
+      "dtype: float64\n",
+      "\n",
+      "Series from dict:\n",
+      "A    100\n",
+      "B    200\n",
+      "C    300\n",
+      "D    400\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "list_data = [10,20,30,40,50]\n",
+    "list_series = pd.Series(list_data)\n",
+    "print('series from list')\n",
+    "print(list_series)\n",
+    "array_data = np.array([0.5,0.8,1.2,1.5,2.0])\n",
+    "array_series = pd.Series(array_data)\n",
+    "print('\\nSeries from numpy array:')\n",
+    "print(array_series)\n",
+    "#craete series from dict\n",
+    "dict_data = {'A':100,'B':200,'C':300,'D':400}\n",
+    "dict_series = pd.Series(dict_data)\n",
+    "print('\\nSeries from dict:')\n",
+    "print(dict_series)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a=np.array([[1,2,3],[4,5,6]])\n",
+    "print(a.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a=np.array([[1,2,3],[4,5,6]])\n",
+    "a.shape=(3,2)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    cars  passings\n",
+      "0    BMW         3\n",
+      "1  Volvo         7\n",
+      "2   Ford         2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas\n",
+    "mydataset = {'cars':['BMW','Volvo','Ford'],'passings':[3,7,2]}\n",
+    "myvar=pandas.DataFrame(mydataset)\n",
+    "print(myvar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    1\n",
+      "1    7\n",
+      "2    2\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "a=[1,7,2]\n",
+    "myvar=pd.Series(a)\n",
+    "print(myvar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x    1\n",
+      "y    7\n",
+      "z    2\n",
+      "dtype: int64\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "a=[1,7,2]\n",
+    "myvar=pd.Series(a,index=['x','y','z'])\n",
+    "print(myvar)\n",
+    "print(myvar['y'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "day1    420\n",
+      "day2    380\n",
+      "day3    390\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "calories={'day1':420,'day2':380,'day3':390}\n",
+    "myvar=pd.Series(calories)\n",
+    "print(myvar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   calories  durations\n",
+      "0       420         50\n",
+      "1       380         40\n",
+      "2       390         45\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data={'calories':[420,380,390],'durations':[50,40,45]}\n",
+    "myvar=pd.DataFrame(data)\n",
+    "print(myvar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calories     420\n",
+      "durations     50\n",
+      "Name: 0, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data={'calories':[420,380,390],'durations':[50,40,45]}\n",
+    "myvar=pd.DataFrame(data)\n",
+    "print(myvar.loc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      calories  durations\n",
+      "day1       420         50\n",
+      "day2       380         40\n",
+      "day3       390         45\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data={'calories':[420,380,390],'durations':[50,40,45]}\n",
+    "df=pd.DataFrame(data,index=['day1','day2','day3'])\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "720\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fact(n):\n",
+    "    if n==0 or n==1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n*fact(n-1)\n",
+    "a=fact(6)\n",
+    "print(a)"
+   ]
   }
  ],
  "metadata": {
