--- a/Day4.ipynb
+++ b/Day4.ipynb
@@ -316,13 +316,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tkinter import *\n",
     "root = Tk()\n",
-    "root.title(\"Welcome to GeeksforGeeks\")\n",
+    "root.title(\"Rachit Tyagi\")\n",
     "root.geometry('350x200')\n",
     "root.mainloop()"
    ]
