--- a/Day4.ipynb
+++ b/Day4.ipynb
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,6 +325,19 @@
     "root.title(\"Rachit Tyagi\")\n",
     "root.geometry('350x200')\n",
     "root.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "r = tk.Tk()\n",
+    "button=tk.Button(text='Stop',width=25,command=r.destroy)\n",
+    "button.pack()\n",
+    "r.mainloop()"
    ]
   }
  ],
