--- a/Day4.ipynb
+++ b/Day4.ipynb
@@ -329,12 +329,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "r = tk.Tk()\n",
+    "r.title('Counting Second')\n",
     "button=tk.Button(text='Stop',width=25,command=r.destroy)\n",
     "button.pack()\n",
     "r.mainloop()"
