--- a/Day4.ipynb
+++ b/Day4.ipynb
@@ -329,13 +329,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "r = tk.Tk()\n",
-    "r.title('Counting Second')\n",
+    "r.title('Rachit Tyagi')\n",
     "button=tk.Button(text='Stop',width=25,command=r.destroy)\n",
     "button.pack()\n",
     "r.mainloop()"
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,6 +351,7 @@
     "from tkinter import *\n",
     "from tkinter import messagebox\n",
     "top = tkinter.Tk()\n",
+    "top.title(\"Rachit Tyagi\")\n",
     "def helloCallBack():\n",
     "    messagebox.showinfo(\"Hello Python\",\"Hello World\")\n",
     "B=tkinter.Button(top,text=\"Hello\",command=helloCallBack)\n",
