--- a/Day4.ipynb
+++ b/Day4.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,6 +357,23 @@
     "B=tkinter.Button(top,text=\"Hello\",command=helloCallBack)\n",
     "B.pack()\n",
     "top.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "master = Tk()\n",
+    "w=Canvas(master,width=40,height=60)\n",
+    "w.pack()\n",
+    "canvas_height=20\n",
+    "canvas_width=200\n",
+    "y=int(canvas_height/2)\n",
+    "w.create_line(0,y,canvas_width,y)\n",
+    "mainloop()"
    ]
   }
  ],
