--- a/Day4.ipynb
+++ b/Day4.ipynb
@@ -361,12 +361,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tkinter import *\n",
     "master = Tk()\n",
+    "master.title(\"Rachit Tyagi\")\n",
     "w=Canvas(master,width=40,height=60)\n",
     "w.pack()\n",
     "canvas_height=20\n",
