--- a/Day4.ipynb
+++ b/Day4.ipynb
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,6 +369,24 @@
     "master = Tk()\n",
     "master.title(\"Rachit Tyagi\")\n",
     "w=Canvas(master,width=40,height=60)\n",
+    "w.pack()\n",
+    "canvas_height=20\n",
+    "canvas_width=200\n",
+    "y=int(canvas_height/2)\n",
+    "w.create_line(0,y,canvas_width,y)\n",
+    "mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "master = Tk()\n",
+    "master.title(\"Rachit Tyagi\")\n",
+    "w=Canvas(master,width=100,height=20,bg='black')\n",
     "w.pack()\n",
     "canvas_height=20\n",
     "canvas_width=200\n",
