--- a/Day4.ipynb
+++ b/Day4.ipynb
@@ -360,6 +360,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Line"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
@@ -379,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,6 +401,44 @@
     "y=int(canvas_height/2)\n",
     "w.create_line(0,y,canvas_width,y)\n",
     "mainloop()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Oval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "master = Tk()\n",
+    "master.title(\"Rachit Tyagi\")\n",
+    "w=Canvas(master,width=400,height=400)\n",
+    "w.pack()\n",
+    "w.create_oval(50,50,150,100,width=2)\n",
+    "mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program ro draw colored shapes (line,rectangle,oval)on canvas"
    ]
   }
  ],
