--- a/Day4.ipynb
+++ b/Day4.ipynb
@@ -427,11 +427,27 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rectangle "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tkinter import *\n",
+    "master = Tk()\n",
+    "master.title(\"Rachit Tyagi\")\n",
+    "w=Canvas(master,width=400,height=400)\n",
+    "w.pack()\n",
+    "w.create_rectangle(50,50,150,100,width=2)\n",
+    "mainloop()"
+   ]
   },
   {
    "attachments": {},
