--- a/Day4.ipynb
+++ b/Day4.ipynb
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
     "master.title(\"Rachit Tyagi\")\n",
     "w=Canvas(master,width=400,height=400)\n",
     "w.pack()\n",
-    "w.create_oval(50,50,150,100,width=2)\n",
+    "w.create_oval(50,50,150,100,width=2,fill='red')\n",
     "mainloop()"
    ]
   },
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,16 +445,8 @@
     "master.title(\"Rachit Tyagi\")\n",
     "w=Canvas(master,width=400,height=400)\n",
     "w.pack()\n",
-    "w.create_rectangle(50,50,150,100,width=2)\n",
+    "w.create_rectangle(50,50,150,100,width=2,fill='yellow')\n",
     "mainloop()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Write a program ro draw colored shapes (line,rectangle,oval)on canvas"
    ]
   }
  ],
