--- a/Day4.ipynb
+++ b/Day4.ipynb
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,6 +447,32 @@
     "w.pack()\n",
     "w.create_rectangle(50,50,150,100,width=2,fill='yellow')\n",
     "mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "def draw_line():\n",
+    "    canvas.create_line(50,50,200,50,fill='red')\n",
+    "def draw_rectangle():\n",
+    "    canvas.create_rectangle(50,100,200,200,fill='blue')\n",
+    "def draw_oval():\n",
+    "    canvas.create_oval(50,250,200,300,fill='green')\n",
+    "window = tk.Tk()\n",
+    "window.title('Drawing Shapes')\n",
+    "canvas = tk.Canvas(window,width=250,height=400)\n",
+    "canvas.pack()\n",
+    "line_button=tk.Button(window,text='Draw Line',command=draw_line)\n",
+    "line_button.pack()\n",
+    "rectangle_button = tk.Button(window,text='Draw Rectangle',command=draw_rectangle)\n",
+    "rectangle_button.pack()\n",
+    "oval_button = tk.Button(window,text='Draw Oval',command=draw_oval)\n",
+    "oval_button.pack()\n",
+    "window.mainloop()"
    ]
   }
  ],
