--- a/internal.ipynb
+++ b/internal.ipynb
@@ -9,16 +9,55 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1 - import numpy as np # create numpy\n",
+    "array arr = np.array([1, 2, 4, 5, 6]) #flipud method for reversing reverse_\n",
+    "arr = np.flipud(arr)\n",
+    "print(reverse_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6 5 4 2 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "    import numpy as np\n",
+    "\n",
+    "arr = np.array([1, 2, 4, 5, 6])\n",
+    "reverse_arr = np.flipud(arr)\n",
+    "print(reverse_arr)\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
