--- a/internal.ipynb
+++ b/internal.ipynb
@@ -203,6 +203,38 @@
     "p.display()\n",
     "del p"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "34. Write a program that creates an iterator to print squares of numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Square_Iterator:\n",
+    "    def __init__(self,limit):\n",
+    "        self.limit = limit\n",
+    "    def __iter__(self):\n",
+    "        self.a = 1\n",
+    "        return self\n",
+    "    def __next__(self):\n",
+    "        if self.limit>=self.a:\n",
+    "            x = self.a\n",
+    "            self.a+=1\n",
+    "            return x**2\n",
+    "        else:\n",
+    "            raise StopIteration\n",
+    "S = Square_Iterator(10)\n",
+    "for i in S:\n",
+    "    print(i)\n"
+   ]
   }
  ],
  "metadata": {
