--- a/internal.ipynb
+++ b/internal.ipynb
@@ -201,7 +201,7 @@
     "        print(self.name)\n",
     "p = Person()\n",
     "p.display()\n",
-    "del p"
+    "del p\n"
    ]
   },
   {
@@ -209,7 +209,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "34. Write a program that creates an iterator to print squares of numbers."
+    "\n",
+    "Write a program that creates an iterator to print squares of numbers."
    ]
   },
   {
@@ -234,6 +235,81 @@
     "S = Square_Iterator(10)\n",
     "for i in S:\n",
     "    print(i)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " WAP that extends the class Employee. Derive two classes Manager and Team\n",
+    "Leader from Employee class. Display all the details of the employee working\n",
+    "under a particular Manager and Team Leader. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "class Employee:\n",
+    "  d = {chr(i):[] for i in range(65,91)}\n",
+    "  def __init__(self, name, emp_id, salary):\n",
+    "        self.name = name\n",
+    "        self.emp_id = emp_id\n",
+    "        self.salary = salary\n",
+    "  def team(self,obj,team):         \n",
+    "    self.d[team].append(obj)\n",
+    "    \n",
+    "\n",
+    "         \n",
+    "class Manager(Employee):\n",
+    "    def __init__(self, name, emp_id, salary, team):\n",
+    "        super().__init__(name, emp_id, salary)\n",
+    "        self.designation = 'Manager'\n",
+    "        self.team = team\n",
+    "\n",
+    "    def display_team(self):\n",
+    "        print(f\"{self.name} \\nID: {self.emp_id} \\nsalary: {self.salary} \\ndesignation: {self.designation} \\nteam: {self.team}\")\n",
+    "        print()\n",
+    "\n",
+    "        print(f\"{self.name} is leading the following employees:\")\n",
+    "        print()\n",
+    "        for emp in self.d[self.team]:\n",
+    "            print(f\"{emp.name} \\nID: {emp.emp_id} \\nsalary: {emp.salary}\")\n",
+    "            print()\n",
+    "\n",
+    "class TeamLeader(Employee):\n",
+    "    def __init__(self, name, emp_id, salary, team):\n",
+    "        super().__init__(name, emp_id, salary)\n",
+    "        self.team = team\n",
+    "        self.designation = 'Team Leader'\n",
+    " \n",
+    "    def display_team(self):\n",
+    "        print(f\"{self.name} \\nID: {self.emp_id} \\nsalary: {self.salary} \\ndesignation: {self.designation} \\nteam: {self.team}\")\n",
+    "        print()\n",
+    "\n",
+    "        print(f\"{self.name} is leading the following employees:\")\n",
+    "        print()\n",
+    "        for emp in self.d[self.team]:\n",
+    "            print(f\"{emp.name} \\nID: {emp.emp_id} \\nsalary: {emp.salary}\")\n",
+    "            print()\n",
+    "emp1 = Employee(\"John\", 1, 50000)\n",
+    "emp1.team(emp1,'A')\n",
+    "emp2 = Employee(\"Jane\", 2, 60000)\n",
+    "emp2.team(emp2,'A')\n",
+    "emp3 = Employee(\"Bob\", 3, 55000)\n",
+    "emp3.team(emp3,'B')\n",
+    "emp4 = Employee(\"Alice\", 4, 65000)\n",
+    "emp4.team(emp4,'B')\n",
+    "mgr = Manager(\"Mike\", 5, 75000, 'A')\n",
+    "tl = TeamLeader(\"Tom\", 6, 70000, 'B')\n",
+    "\n",
+    "mgr.display_team()\n",
+    "tl.display_team()"
    ]
   }
  ],
